[Video Capture, Linux] Change log level from ERROR to INFO

Change log level for logs that appear to be normal/expected behavior for
certain webcams in order to reduce log spam.

Bug: 743093
Change-Id: I4c0b4c05a84a9d17a9777b1310a1a741f729daf4
Reviewed-on: https://chromium-review.googlesource.com/1188435
Reviewed-by: Emircan Uysaler <emircan@chromium.org>
Commit-Queue: Christian Fremerey <chfremer@chromium.org>
Cr-Commit-Position: refs/heads/master@{#585898}
Former-commit-id: 099023fe93c8eaaa7440ffda10318313f9c50693