media/capture/video/linux/video_capture_device_factory_linux.cc
@@ -267,7 +267,7 @@ bool VideoCaptureDeviceFactoryLinux::HasUsableFormats(int fd,
     }
   }
 
-  DLOG(ERROR) << "No usable formats found";
+  DVLOG(1) << "No usable formats found";
   return false;
 }
 
